--- a/ProfJohnGallaugher-SwiftUI-Projects-Info.plist
+++ b/ProfJohnGallaugher-SwiftUI-Projects-Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>UILaunchScreen</key>
 	<dict>
+		<key>UIColorName</key>
+		<string>launchScreenBGColor</string>
 		<key>UIImageName</key>
 		<string>launchscreen</string>
 		<key>UILaunchScreen</key>
